--- a/.prettierrc
+++ b/.prettierrc
@@ -5,8 +5,8 @@
     "tabWidth": 2,
     "printWidth": 100,
     "plugins": [
-        "prettier-plugin-tailwindcss",
-        "@trivago/prettier-plugin-sort-imports"
+        "@trivago/prettier-plugin-sort-imports",
+        "prettier-plugin-tailwindcss"
     ],
     "importOrder": [
         "<THIRD_PARTY_MODULES>",
