--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,26 @@
 {
   "version": "0.2.0",
   "configurations": [
+     {
+      "name": "Debug client-side in Edge",
+      "type": "msedge",
+      "request": "launch",
+      "url": "http://localhost:3000",
+    },
     {
-      "name": "Next.js: debug full stack",
+      "name": "Debug client-side in Chrome",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://localhost:3000",
+    },
+    {
+      "name": "Debug server-side",
+      "type": "node-terminal",
+      "request": "launch",
+      "command": "npm run dev"
+    },
+    {
+      "name": "Debug full stack",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
