--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "bradlc.vscode-tailwindcss",
     "formulahendry.auto-rename-tag",
     "nextpress.nextpress-snippets",
-    "abdulowhab.json-to-ts-type"
+    "abdulowhab.json-to-ts-type",
+    "tomoki1207.pdf"
   ]
 }
