--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "formulahendry.auto-rename-tag",
     "nextpress.nextpress-snippets",
     "abdulowhab.json-to-ts-type",
-    "tomoki1207.pdf"
+    "tomoki1207.pdf",
+    "humao.rest-client"
   ]
 }
