--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "immer": "^10.1.3",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
