Add and configure MS Edge DevTools extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "nextpress.nextpress-snippets",
     "abdulowhab.json-to-ts-type",
     "tomoki1207.pdf",
-    "humao.rest-client"
+    "humao.rest-client",
+    "ms-edgedevtools.vscode-edge-devtools"
   ]
 }
