remove MS DevTools settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,8 +19,5 @@
   "git.autofetch": true,
   "git.autofetchPeriod": 60,
   "typescript.preferences.importModuleSpecifier": "non-relative",
-  "javascript.preferences.importModuleSpecifier": "non-relative",
-  "vscode-edge-devtools.defaultUrl": "http://localhost:8080",
-  "vscode-edge-devtools.webhint": false,
-  "vscode-edge-devtools.webhintInstallNotification": true
+  "javascript.preferences.importModuleSpecifier": "non-relative"
 }
