--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "lucide-react": "^0.561.0",
+    "next": "16.0.10",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
-    "zustand": "^5.0.9"
+    "zustand": "^5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -25,12 +26,12 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "daisyui": "^5.5.8",
+    "daisyui": "^5",
     "eslint": "^9",
-    "eslint-config-next": "16.0.8",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react": "^7.37.5",
-    "prettier": "^3.7.4",
+    "eslint-config-next": "16.0.10",
+    "eslint-config-prettier": "^10",
+    "eslint-plugin-react": "^7",
+    "prettier": "^3",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4",
     "typescript": "^5"
