--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "react": "19.2.3",
