force update minimatch version

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
